developer/development/test-modules/klight-api-gateway/kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: klight-api-gateway
spec:
  type: ClusterIP
  selector:
    app: klight-api-gateway
    type: service
    env: dev
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
